// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Flex Component correctly 1`] = `
<div
  className="sc-eNQAEJ YwarW"
/>
`;

exports[`renders the Flex Component correctly 2`] = `
<div
  className="sc-eNQAEJ kvJOWx"
/>
`;

exports[`renders the Flex Component correctly 3`] = `
<div
  className="sc-eNQAEJ gWBbkW"
/>
`;
